<?xml version="1.0"?>
<package format="2">
  <name>access_mapping</name>
  <version>0.0.0</version>
  <description>The access_mapping package</description>

  <maintainer email="eckelsjd@rose-hulman.edu">eckelsjd</maintainer>


  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/access_mapping</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
